--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sass</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Sass</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, officiis veniam asperiores unde aliquam perspiciatis rem autem reiciendis. Quod itaque dolorum deleniti libero praesentium, cumque quasi ratione nesciunt magnam, consequuntur dolores sunt fugit commodi doloremque molestiae earum nostrum voluptatum architecto qui officia adipisci, illum dolorem! Aspernatur doloribus quisquam fugiat, natus itaque corrupti iure suscipit cum est molestias repudiandae minima, nobis praesentium, rem necessitatibus dolores exercitationem consectetur nam! Non magnam voluptatum velit adipisci molestiae dolorem ea iste libero, enim, nobis doloribus quam ducimus officiis delectus dignissimos iusto et explicabo harum consectetur pariatur quidem repellat sed repudiandae. Est itaque autem minus ea!</p>
+    </div>
 </body>
 </html>
